# sculptor

./: .cursorignore  .dockerignore  .envrc  .gitattributes  .gitconfig  .gitignore  .pyre_configuration  .ratchetignore  CHANGELOG.sculpted.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPING.md  HELLO.md  LICENSE.md  Makefile  NEWS.md  README.md  SECURITY.md  TASKS.md  _version.py  _version.pyi  codex-output-schema.json  conftest.py  constants.py  depot.json  git-filter-repo.paths  justfile  offload-electron.toml  offload-history.jsonl  offload-perf.toml  offload-unit.toml  offload.toml  openhost-nginx.conf  openhost-preview-fallback.html  openhost-run.sh  openhost.Dockerfile  openhost.toml  pyproject.toml  pyrefly.toml  pytest.ini  (+9 more)
imbue_core/: pyproject.toml  pytest.ini
imbue_core/imbue_core/: async_monkey_patches.py  async_monkey_patches_test.py  async_utils.py  async_utils_test.py  cattrs_serialization.py  cattrs_serialization_test.py  common.py  concurrency_group.py  concurrency_group_test.py  conftest.py  errors.py  event_utils_test.py  fixed_traceback.py  fixtures.py  function_utils_test.py  git.py  git_data_types.py  ids.py  itertools.py  log_utils.py  nested_evolver.py  pydantic_serialization.py  pydantic_serialization_test.py  pydantic_utils_test.py  retry_utils.py  serialization.py  serialization_test.py  subprocess_utils.py  subprocess_utils_test.py  test_errors.py  test_utils.py  thread_utils.py  upper_case_str_enum_test.py
imbue_core/imbue_core/computing_environment/: computing_environment.py
imbue_core/imbue_core/processes/: local_process.py  local_process_background_test.py  local_process_blocking_test.py  local_process_kill_now_test.py  local_process_streaming_test.py
imbue_core/imbue_core/progress_tracking/: progress_tracking.py
imbue_core/imbue_core/sculptor/: __init__.py  custom_actions.py  telemetry.py  user_config.py  user_config_test.py
sculptor/: .coveragerc  .gitignore  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  style.md
sculptor/backend/: drizzle.config.ts  esbuild.config.mjs  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sculptor/backend/drizzle/: 0000_eminent_omega_sentinel.sql  0001_easy_the_santerians.sql  0002_graceful_firelord.sql
sculptor/backend/scripts/: build-sidecar.sh
sculptor/backend/src/: app.test.ts  app.ts  index.ts  openapi.ts  openapi_overlay.json  smoke.test.ts  static.test.ts  static.ts
sculptor/builder/: README.md  artifacts.py  build-migrate.sh  build-sculpt.sh  build-sidecar.sh  cli.py  darwin.py  install-build-dependencies-x86_64.sh  package-sculptor-x86_64.sh  pyproject.toml  test-sculptor-desktop-packaged.sh  test_artifacts.py  test_cli.py  validate_sculptor_dmg.sh
sculptor/cli/: README.md
sculptor/database/: README.md
sculptor/frontend/: .gitignore  .npmrc  .prettierrc.cjs  .stylelintrc.json  README.md  babel.config.ts  dev-app-update.yml  eslint.config.ts  forge.config.ts  index.html  jest.config.ts  jest.setup.ts  launch-preview.sh  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.extension-sdk-dts.json  tsconfig.json  tsconfig.node.json  tsconfig.plugin-sdk-dts.json  vite.base.config.ts  vite.config.ts  vite.electron.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vite.web.config.ts  vitest.config.ts  vitest.setup.ts
sculptor/frontend/.storybook/: main.ts  preview.tsx  storybook-overrides.css  vitest.setup.ts
sculptor/frontend/config/: entitlements.mac.plist
sculptor/frontend/extensions/: README.md
sculptor/frontend/plugins/: README.md
sculptor/frontend/scripts/: generate-api.sh  generate-extension-sdk-dts.sh  generate-plugin-sdk-dts.sh  generate-pwa-icons.sh
sculptor/frontend/src/: App.tsx  EmptyFirstRunGate.tsx  Main.tsx  Router.tsx  apiClient.ts  globals.d.ts  index.css  instrument.test.ts  instrument.ts  preload.ts  vite-env.d.ts
sculptor/frontend/vite-plugins/: bundled-extensions.ts  bundled-plugins.ts  extension-runtime-stubs.ts  plugin-runtime-stubs.ts
sculptor/interfaces/: README.md
sculptor/interfaces/agents/: README.md
sculptor/interfaces/environments/: README.md
sculptor/scripts/: prompt-release-notes.md
sculptor/sculptor/: README.md  __init__.py  conftest.py  constants.py  posthog_settings.py  pyre_test.py  pyrefly_test.py  sentry_settings.py  startup_checks.py  version.py  version_test.py
sculptor/sculptor-experimental/.claude-plugin/: plugin.json
sculptor/sculptor-plugin/.claude-plugin/: plugin.json
sculptor/sculptor-workflow/.claude-plugin/: plugin.json
sculptor/sculptor/agents/: attachments.py  attachments_test.py  harness_registry.py  harness_registry_test.py  spotlight_reminder.py  spotlight_reminder_test.py
sculptor/sculptor/cli/: app.py  app_test.py  main.py  main_test.py
sculptor/sculptor/common/: plugin.py
sculptor/sculptor/config/: custom_actions.py  settings.py  test_settings.py  user_config.py  user_config_test.py
sculptor/sculptor/database/: README.md  automanaged.py  core.py  models.py  utils.py  workspace_enums.py
sculptor/sculptor/foundation/: async_monkey_patches.py  async_monkey_patches_test.py  async_utils.py  async_utils_test.py  common.py  concurrency_group.py  concurrency_group_test.py  conftest.py  constants.py  event_utils.py  event_utils_test.py  fixed_traceback.py  fixtures.py  frozen_utils.py  frozen_utils_test.py  function_utils.py  function_utils_test.py  git.py  itertools.py  log_utils.py  nested_evolver.py  pydantic_serialization.py  pydantic_serialization_test.py  pydantic_utils.py  pydantic_utils_test.py  pytest.ini  retry_utils.py  secrets_utils.py  serialization.py  serialization_test.py  serialization_types.py  subprocess_utils.py  subprocess_utils_test.py  telemetry.py  test_errors.py  thread_utils.py  time_utils.py  upper_case_str_enum_test.py  user_config.py  user_config_test.py
sculptor/services/: README.md
sculptor/tasks/: README.md
sculptor/testing/: README.md
sculptor/tests/: conftest.py
sculptor/utils/: README.md
tools/sculpt/: README.md  pyproject.toml
(+4286 files in other folders)
