[project]
name = "sculptor-workspace"
version = "0.0.1"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "pydevd-pycharm>=251.23774.123",
    "pyjson5==1.6.9",
    "mcp>=1.9.1",
    "fastmcp>=2.1.2",
    "junit2html>=31.0.2",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = []

[tool.formatters.python]
ignore_import_changes = []
do_not_remove_imports = ["__init__.py", "warlock.py"]
do_not_autotype = []

[tool.coverage.run]
omit = [
    # omit anything that starts or ends with .py
    "*/test_*.py",
    "*/*_test.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.uv.config-settings]
# Needed for mypy - without it it doesn't pick up the installed editable packages
editable_mode = "compat"

[tool.uv.workspace]
members = [
    "tools/sculpt",
    "sculptor",
]

[tool.uv.sources]
sculpt = { workspace = true }
sculptor = { workspace = true }

[tool.uv]
cache-keys = [{ git = { commit = true } }]
override-dependencies = [
    "colorama==0.4.4",
    "editdistance>=0.6.2",
    "fsspec==2023.5.0",
    "htmldate==1.5.1",
    "lxml==4.9.2",
    "s3fs==2024.6.1",
]


package = false
required-version = ">=0.7.22"

[tool.ruff]
line-length = 119
exclude = [
  "**/__mock_llm_responses__/**",
  "**/__snapshots__/**",
  "**/quarantine/**",
  "test_data/**",
  "**/*.ipynb",
]

[tool.ruff.format]
docstring-code-line-length = 119
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "sculptor",
    "tests",
]
known-third-party = [
    "docker",
    "wandb",
]
no-lines-before = ["future"]

[tool.ruff.lint.per-file-ignores]
# Test files in sculptor.foundation came over wholesale from the former standalone imbue_core
# library, which predates sculptor's lint scope. They use bindings (spawned threads/processes,
# captured exception_info) purely for their side effects, which trips F841. Suppress it for these
# tests only; production foundation code is held to the full ruleset.
"sculptor/sculptor/foundation/**/*_test.py" = ["F841"]
"sculptor/sculptor/foundation/**/test_*.py" = ["F841"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.12.0",
    "pydevd-pycharm>=251.23774.123",
    "pydevd>=3.3.0",
    "pyre-check>=0.9.23",
    "pytest-watcher>=0.4.3",
    # Ruff uses minor versions to signal breaking changes until 1.0.0 is reached.
    "pytest-xdist>=3.8.0",
    "ruff~=0.12.8",
]

