[project]
name = "sculptor-workspace"
version = "0.0.1"
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.23.0,<2",
    "fastmcp>=2.1.2",
    "junit2html>=31.0.2",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = []

[tool.formatters.python]
ignore_import_changes = []
do_not_remove_imports = ["__init__.py", "warlock.py"]
do_not_autotype = []

[tool.coverage.run]
omit = [
    # omit anything that starts or ends with .py
    "*/test_*.py",
    "*/*_test.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.uv.config-settings]
# Needed for mypy - without it it doesn't pick up the installed editable packages
editable_mode = "compat"

[tool.uv.workspace]
members = [
    "tools/sculpt",
    "sculptor",
]

[tool.uv.sources]
sculpt = { workspace = true }
sculptor = { workspace = true }

[tool.uv]
cache-keys = [{ git = { commit = true } }]

package = false
# 0.8.13 is the first uv whose bundled python-downloads metadata includes
# cpython 3.13.7, which the sidecar builder scripts pin.
required-version = ">=0.8.13"

[tool.ruff]
# Pin the syntax target below requires-python. Python 3.14's PEP 758 lets `except`
# omit parentheses (`except A, B:`), and ruff's formatter strips them under a py314
# target — but that form is 3.14-only and reads like the Python 2 `except A, e:`
# footgun, so keep the parenthesized, version-portable style.
target-version = "py313"
line-length = 119
exclude = [
  "**/__mock_llm_responses__/**",
  "**/__snapshots__/**",
  "**/quarantine/**",
  "test_data/**",
  "**/*.ipynb",
]

[tool.ruff.format]
docstring-code-line-length = 119
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "sculptor",
    "tests",
]
known-third-party = [
    "docker",
    "wandb",
]
no-lines-before = ["future"]

[tool.ruff.lint.per-file-ignores]
# Test files in sculptor.foundation came over wholesale from the former standalone imbue_core
# library, which predates sculptor's lint scope. They use bindings (spawned threads/processes,
# captured exception_info) purely for their side effects, which trips F841. Suppress it for these
# tests only; production foundation code is held to the full ruleset.
"sculptor/sculptor/foundation/**/*_test.py" = ["F841"]
"sculptor/sculptor/foundation/**/test_*.py" = ["F841"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.12.0",
    "pyrefly>=1.0.0",
    "pytest-watcher>=0.4.3",
    "pytest-xdist>=3.8.0",
    # Ruff uses minor versions to signal breaking changes until 1.0.0 is reached.
    "ruff~=0.15.17",
]
