[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sculpt"
version = "0.1.0"
readme = "README.md"
description = "CLI client for the Sculptor API"
license = { text = "MIT" }
dependencies = [
    # Dependencies for the generated API client
    "attrs>=26.1.0",
    "httpx>=0.28.1",
    # Models
    "pydantic>=2.11.4",
    # CLI framework
    "typer>=0.26.7",
    # WebSocket client
    "websockets>=13.0",
]
requires-python = ">=3.14"

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.15.0",
]

[project.scripts]
sculpt = "sculpt.main:app"

[dependency-groups]
dev = [
    "openapi-python-client>=0.29.0",
    "pytest>=8.0.0",

    "respx>=0.23.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require sculptor package)",
]
